[package]
name = "kecs_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kecs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
clap = { version = "4.0.32", features = ["derive"] }
kecs = { path = "../lib" }
indicatif = "0.17.0"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
